# sunset-afterglow-probability

./: .gitignore  CITATION.cff  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  results.json
.github/workflows/: ci.yml
src/: __init__.py  build_report.py  sunset_afterglow.py
tests/: test_model.py
