[project]
name = "sunset-afterglow-probability"
version = "0.2.0"
description = "An educational stochastic simulator of wavelength-dependent atmospheric transmission"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
